--- a/clientSide/package.json
+++ b/clientSide/package.json
@@ -7,18 +7,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "@tanstack/react-query": "^5.90.7",
     "axios": "^1.6.2",
-    "react-hook-form": "^7.48.2",
-    "react-calendar": "^4.7.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-router-dom": "^6.20.0",
     "sonner": "^1.2.0"
   },
   "devDependencies": {
@@ -37,4 +38,3 @@
     "vite": "^5.0.8"
   }
 }
-
